syntax = "proto3";

package yandex.cloud.priv.iam.v1;

import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";
import "ydb/public/api/client/yc_private/iam/iam_token.proto";
import "ydb/public/api/client/yc_private/iam/service_account.proto";
//import "ydb/public/api/client/yc_private/access/access.proto";
import "ydb/public/api/client/yc_private/operation/operation.proto";
import "ydb/public/api/client/yc_private/iam/reference.proto";

service ServiceAccountService {
  rpc Get (GetServiceAccountRequest) returns (ServiceAccount) {
    option (google.api.http) = { get: "/iam/v1/serviceAccounts/{service_account_id}" };
  }

  rpc List (ListServiceAccountsRequest) returns (ListServiceAccountsResponse) {
    option (google.api.http) = { get: "/iam/v1/serviceAccounts" };
  }

  rpc Create (CreateServiceAccountRequest) returns (.ydb.yc.priv.operation.Operation) {
    option (google.api.http) = { post: "/iam/v1/serviceAccounts" body: "*" };
  }

  rpc Update (UpdateServiceAccountRequest) returns (.ydb.yc.priv.operation.Operation) {
    option (google.api.http) = { patch: "/iam/v1/serviceAccounts/{service_account_id}" body: "*" };
  }

  rpc Delete (DeleteServiceAccountRequest) returns (.ydb.yc.priv.operation.Operation) {
    option (google.api.http) = { delete: "/iam/v1/serviceAccounts/{service_account_id}" };
  }

  //access

  rpc ListOperations (ListServiceAccountOperationsRequest) returns (ListServiceAccountOperationsResponse) {
    option (google.api.http) = { get: "/iam/v1/serviceAccounts/{service_account_id}/operations" };
  }

  rpc IssueToken (IssueTokenRequest) returns (IamToken) {
    option (google.api.http) = { post: "/iam/v1/serviceAccounts/{service_account_id}:issueToken" body: "*" };
  }

  rpc ListReferences (ListServiceAccountReferencesRequest) returns (ListServiceAccountReferencesResponse);

  rpc UpdateReferences (UpdateServiceAccountReferencesRequest) returns (.ydb.yc.priv.operation.Operation);
}

message GetServiceAccountRequest {
  string service_account_id = 1;
}

message ListServiceAccountsRequest {
  string folder_id = 1;
  int64 page_size = 2;
  string page_token = 3;
  string filter = 4;
}

message ListServiceAccountsResponse {
  repeated ServiceAccount service_accounts = 1;
  string next_page_token = 2;
}

message CreateServiceAccountRequest {
  string folder_id = 1;
  string name = 2;
  string description = 3;
  string id = 4;
  map<string, string> labels = 5;

  repeated reference.Reference references = 100;
}

message CreateServiceAccountMetadata {
  string service_account_id = 1;
}

message UpdateServiceAccountRequest {
  string service_account_id = 1;
  google.protobuf.FieldMask update_mask = 2;

  string name = 3;
  string description = 4;
  map<string, string> labels = 5;
}

message UpdateServiceAccountMetadata {
  string service_account_id = 1;
}

message DeleteServiceAccountRequest {
  string service_account_id = 1;
}

message DeleteServiceAccountMetadata {
  string service_account_id = 1;
}

message ListServiceAccountOperationsRequest {
  string service_account_id = 1;
  int64 page_size = 2;
  string page_token = 3;
}

message ListServiceAccountOperationsResponse {
  repeated .ydb.yc.priv.operation.Operation operations = 1;
  string next_page_token = 2;
}

message IssueTokenRequest {
  string service_account_id = 1;
  string instance_id = 2;
}

message ListServiceAccountReferencesRequest {
  string service_account_id = 1;
  int64 page_size = 2;
  string page_token = 3;
}

message ListServiceAccountReferencesResponse {
  repeated reference.Reference references = 1;
  string next_page_token = 2;
}

message UpdateServiceAccountReferencesRequest {
  string service_account_id = 1;
  repeated reference.Reference reference_additions = 2;
  repeated reference.Reference reference_deletions = 3;
}

message UpdateServiceAccountReferencesResponse {
}

message UpdateServiceAccountReferencesMetadata {
  string service_account_id = 1;
}
